--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ cachetools==5.5.2
 certifi==2025.4.26
 charset-normalizer==3.4.1
 chroma-hnswlib==0.7.6
-chromadb==1.0.7
+chromadb==1.1.0
 click==8.1.8
 colorama==0.4.6
 coloredlogs==15.0.1
@@ -54,10 +54,11 @@ jsonschema-specifications==2025.4.1
 kubernetes==32.0.1
 langchain==0.3.24
 langchain-community==0.3.23
-langchain-core==0.3.56
+langchain-chroma==0.2.6
+langchain-core==0.3.77
 langchain-openai==0.3.14
 langchain-text-splitters==0.3.8
-langsmith==0.3.39
+langsmith==0.4.31
 lxml==5.4.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
@@ -93,6 +94,7 @@ protobuf==5.29.4
 pyarrow==20.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
+pybase64==1.4.2
 pydantic==2.11.4
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
